# ort-seed-interface-impl

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
csharp/: csharp.sln
csharp/OrtSeedImpl/: Library.cs  NativeMethod.cs  OrtSeedImpl.csproj
csharp/SineStriker.OnnxRuntimeImpl/: ApiProxy.cs  NativeMethod.cs  Seed.cs  Sessions.cs  SineStriker.OnnxRuntimeImpl.csproj  Stablize.cs
csharp/TestSetSeed/: .gitignore  Program.cs  TestSetSeed.csproj  Utils.cs
csharp/TestSetSeed/models/: random.onnx
libs/: .gitignore
ortproxy/: CMakeLists.txt  dllspec.h  ortproxy.cpp  ortproxy.h  ortproxy_win.cpp
ortproxy/dylib/example/: CMakeLists.txt  README.md
ortproxy/test/: CMakeLists.txt  main.cpp
src/: ortseed.cpp  ortseed.h
